<resources>
    <string name="app_name">BOYJ</string>
    <string name="app_full_name">THE BOYJ</string>
    <string name="git_hub_url">https://github.com/the-boyj/WebRTC_Android</string>

    <!-- Splash -->
    <string name="app_description">광운대학교 산학연계 프로젝트</string>

    <!-- Sign -->
    <string name="sign_login_hint">아이디</string>

    <!-- Menu -->
    <string name="menu_update_profile">이름 변경</string>
    <string name="menu_refresh_user_list">새로 고침</string>
    <!-- Name change dialog -->
    <string name="dialog_positive_button">확인</string>
    <string name="dialog_negative_button">취소</string>
    <string name="dialog_edit_text_hint">이름</string>
    <string name="dialog_edit_text_helper_text">변경할 이름을 입력하세요.</string>

    <!-- Call Activity -->
    <string name="text_connect_message">전화를 거는중…</string>

    <!-- CallOnActivity -->
    <string name="text_call_on_message">수신전화</string>
    <string name="text_call_accept">응답</string>
    <string name="text_call_reject">거절</string>

    <!-- Invite -->
    <string name="text_invite_user">초대하기</string>
    <string name="text_invite_empty_list">초대 가능한 유저가 없습니다</string>

    <!-- Permission -->
    <string name="text_notice_description">
        안내사항 \n\n
        모든 소스코드는 이곳에서 확인 가능합니다.
        \n\n
        The BOYJ 앱을 이용하기 위해 다음 권한이 필요합니다.
        \n\n
        1. 마이크
        \n
        &#160;&#160; 영상 통화에 사용되는 오디오 전송
        \n\n
        2. 카메라\n
        &#160;&#160; 영상 통화에 사용되는 카메라 전송
        \n\n
        3. 전화\n
        &#160;&#160; 스피커 폰 통화 제어
        \n\n
        4. 인터넷
        \n\n
        5. 진동 제어\n
    </string>
</resources>
