<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_x_small"
        android:hint="@string/dialog_edit_text_hint"
        app:boxStrokeWidth="2dp"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/name_max_length"
        app:helperText="변경할 이름을 입력하세요."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tv_positive"
        style="@style/NameDialogTextView"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginBottom="@dimen/space_small"
        android:text="@string/dialog_positive_button"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout" />

    <TextView
        android:id="@+id/tv_negative"
        style="@style/NameDialogTextView"
        android:layout_marginEnd="@dimen/space_x_large"
        android:text="@string/dialog_negative_button"
        android:textColor="@color/colorRed"
        app:layout_constraintBottom_toBottomOf="@id/tv_positive"
        app:layout_constraintEnd_toStartOf="@id/tv_positive"
        app:layout_constraintTop_toTopOf="@id/tv_positive" />

</android.support.constraint.ConstraintLayout>